Two-Pointers:Optimized code to O(n*n) from O(n*n*n)